--- a/IMDb buddy buddy/Home-page.html
+++ b/IMDb buddy buddy/Home-page.html
@@ -40,7 +40,7 @@
             <!-- IMDb Pro  -->
             <div class="IMDb-Pro">
                 <button style="border:1px;">
-                    <img src="Pasted image 20230802011726.png" style="padding:">
+                    <img src="Pasted image 20230802011726.png">
                 </button>
             </div>
 
