image scroll box section1

--- a/IMDb buddy buddy/Home-page.html
+++ b/IMDb buddy buddy/Home-page.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <title>Doppleganger</title>
-    <link rel="stylesheet" href="Style.css"> 
+    <link rel="stylesheet" href="Style.css">
+    <link rel="stylesheet" href="section1.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
@@ -40,7 +41,7 @@
             <!-- IMDb Pro  -->
             <div class="IMDb-Pro">
                 <button style="border:1px;">
-                    <img src="Pasted image 20230802011726.png" style="padding:">
+                    <img src="Pasted image 20230802011726.png">
                 </button>
             </div>
 
@@ -71,6 +72,47 @@
             </section>
         </div>
     </heading>
+
+    <section class="section1">
+        <div class="major-container">
+          <div class="scroll-container">
+            <div class="scroll element1">
+              <h1>i</h1>
+            </div>
+            <!--image 1-->
+            <div class="scroll">
+                <h1>love</h1>
+            </div>
+            <!--image 2-->
+            <div class="scroll">
+                <h1>Quasaunt</h1>
+            </div>
+            <!--image 3-->
+            <div class="scroll">
+                <h1>and</h1>
+            </div>
+            <!--image 4-->
+            <div class="scroll">
+                <h1>egg tarts</h1>
+            </div>
+            <!--image 5-->
+            <div class="scroll">
+                <h1>baked</h1>
+            </div>
+            <!--image 6-->
+            <div class="scroll">
+                <h1>with</h1>
+            </div>
+            <!--image 7-->
+            <div class="scroll">
+                <h1>meat oil</h1>
+            </div>
+          </div>
+        </div>
+        <div class="minor-section">
+          
+        </div>
+      </section>
     </body>
 </body>
 </html>
