Finished the basics on the navigation section

--- a/IMDb buddy buddy/Home-page.html
+++ b/IMDb buddy buddy/Home-page.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="Style.css"> 
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
-<body>
 
+<body>
     <!-- part 1 HTML of INDB cloning-->
-      <heading class="hero-title">
+    <nav class="hero-title" >
         <div style="width:70%;">
             <!-- homepage -->
                 <img src="https://upload.wikimedia.org/wikipedia/commons/6/69/IMDB_Logo_2016.svg" alt="homepage">
@@ -65,12 +65,24 @@
                 </button>
             </div>
 
+            <!-- Language button (Change text depending on the language selected) -->
+            <div class="languge-button">
+                <button>
+                    EN <i class='bx bxs-down-arrow'></i>
+                </button>
+            </div>
             <!-- Showcase scroll screen -->
             <section class=""showcase-scroll-img>
 
             </section>
         </div>
-    </heading>
-    </body>
+    </nav>
+
+    <!-- Main body of the website  -->
+    <div class="body">
+
+    </div>
+
 </body>
+
 </html>
