Started on the body

--- a/IMDb buddy buddy/Home-page.html
+++ b/IMDb buddy buddy/Home-page.html
@@ -10,7 +10,7 @@
 
 <body>
     <!-- part 1 HTML of INDB cloning-->
-    <nav class="hero-title" >
+    <nav class="hero-title">
         <div style="width:70%;">
             <!-- homepage -->
                 <img src="https://upload.wikimedia.org/wikipedia/commons/6/69/IMDB_Logo_2016.svg" alt="homepage">
@@ -80,7 +80,7 @@
 
     <!-- Main body of the website  -->
     <div class="body">
-
+        acwca 
     </div>
 
 </body>
