--- a/IMDb buddy buddy/Home-page.html
+++ b/IMDb buddy buddy/Home-page.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <title>Doppleganger</title>
+    <link rel="shortcut icon" type="image/png" href="download.png">
     <link rel="stylesheet" href="Style.css"> 
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
@@ -53,8 +54,8 @@
             <!-- Watchlist -->
             <button class="watchlist">
                 <div>
-                    <i class='bx bx-bookmark-plus flex-align'></i>
-                    <span class="flex-align"> Watchlist </span>
+                    <i class='bx bx-bookmark-plus id="flex-align"'></i>
+                    <span id="flex-align"> Watchlist </span>
                 </div>
             </button>
 
@@ -79,10 +80,15 @@
     </nav>
 
     <!-- Main body of the website  -->
-    <div class="body">
-        
+    <div class="background-black">
+        <div class="body">
+            <!-- Main page  -->
+            <div class="Main-page">
+                <a id="trailer" href="https://www.imdb.com/video/vi210224921/?listId=ls053181649&ref_=hm_hp_i_hero-video-1_1"><img src="Marvel-Studios-I-Am-Groot-Season-2-_-Official-Trailer-_-Disney-0-28-screenshot.webp" alt="Groot img"> </a>
+                <a id="Poster" href="https://www.imdb.com/title/tt13623148/?ref_=hm_hp_cap_pri_hero-video-1_1"> <img src="Marvels-I-Am-Groot-Season-2-Poster-691x1024.jpg" alt="Groot poster" > </a>
+            </div>
+        </div>
     </div>
-
 </body>
 
 </html>
