--- a/IMDb buddy buddy/Home-page.html
+++ b/IMDb buddy buddy/Home-page.html
@@ -84,7 +84,11 @@
         <div class="body">
             <!-- Main page  -->
             <div class="Main-page">
-                <a id="trailer" href="https://www.imdb.com/video/vi210224921/?listId=ls053181649&ref_=hm_hp_i_hero-video-1_1"><img src="Marvel-Studios-I-Am-Groot-Season-2-_-Official-Trailer-_-Disney-0-28-screenshot.webp" alt="Groot img"> </a>
+                <!-- Trailer video -->
+               <div id="Opacity-trailer"> 
+                    <a id="trailer" href="https://www.imdb.com/video/vi210224921/?listId=ls053181649&ref_=hm_hp_i_hero-video-1_1"><img src="Marvel-Studios-I-Am-Groot-Season-2-_-Official-Trailer-_-Disney-0-28-screenshot.webp" alt="Groot img"> </a>
+                </div>
+                <!-- Poster image -->
                 <a id="Poster" href="https://www.imdb.com/title/tt13623148/?ref_=hm_hp_cap_pri_hero-video-1_1"> <img src="Marvels-I-Am-Groot-Season-2-Poster-691x1024.jpg" alt="Groot poster" > </a>
             </div>
         </div>
