--- a/IMDb buddy buddy/Home-page.html
+++ b/IMDb buddy buddy/Home-page.html
@@ -70,6 +70,7 @@
     <!-- Showcase scroll screen -->
     <section class="section1">
         <div class="major-container">
+            <button onclick="scrollleft()">button</button>
           <div class="scroll-container">
             <div class="scroll element1">
               <h1>i</h1>
