--- a/IMDb buddy buddy/Home-page.html
+++ b/IMDb buddy buddy/Home-page.html
@@ -70,37 +70,41 @@
     <!-- Showcase scroll screen -->
     <section class="section1">
         <div class="major-container">
-            <button onclick="scrollleft()">button</button>
           <div class="scroll-container">
-            <div class="scroll element1">
-              <h1>i</h1>
+            <div class="scroll img1">
+                <div class="ds-container">
+                    <div class="poster">
+                        <img src="https://assets-prd.ignimgs.com/2022/07/22/iamgroot-button-1658520669711.jpg" alt="">
+                    </div>
+                    <h1>My man I have done it</h1>
+                </div>
             </div>
             <!--image 1-->
-            <div class="scroll">
+            <div class="scroll img2">
                 <h1>love</h1>
             </div>
             <!--image 2-->
-            <div class="scroll">
+            <div class="scroll img3">
                 <h1>Quasaunt</h1>
             </div>
             <!--image 3-->
-            <div class="scroll">
+            <div class="scroll img4">
                 <h1>and</h1>
             </div>
             <!--image 4-->
-            <div class="scroll">
+            <div class="scroll img5">
                 <h1>egg tarts</h1>
             </div>
             <!--image 5-->
-            <div class="scroll">
+            <div class="scroll img6">
                 <h1>baked</h1>
             </div>
             <!--image 6-->
-            <div class="scroll">
+            <div class="scroll img7">
                 <h1>with</h1>
             </div>
             <!--image 7-->
-            <div class="scroll">
+            <div class="scroll img8">
                 <h1>meat oil</h1>
             </div>
           </div>
