--- a/IMDb buddy buddy/Home-page.html
+++ b/IMDb buddy buddy/Home-page.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <title>Doppleganger</title>
+    <link rel="stylesheet" href="maincss.css"> <!--for all of the parts-->
     <link rel="stylesheet" href="Style.css"> 
     <link rel="stylesheet" href="section1.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -68,7 +69,7 @@
         </div>
     </heading>
     <!-- Showcase scroll screen -->
-    <section class="section1">
+    <section class="section section1">
         <div class="major-container">
           <div class="scroll-container">
             <div class="scroll img1">
@@ -108,11 +109,62 @@
                 <h1>meat oil</h1>
             </div>
           </div>
-        </div>
         <div class="minor-section">
           
         </div>
-      </section>
-    </body>
+    </section>
+
+    <!--part 2 of cloning IMDb website-->
+    <section class="section section2">
+        <h2 class="sub-title">Featured today</h2>
+    </section>
+    <!--part 3 of cloning IMDb website-->
+    <section class="section section3">
+        <h2 class="sub-title">What to watch</h2>
+        <h3 class="catagory-title"><span class="catagory-start">|</span>Top picks</h3>
+    </section>
+    <!--part 4 of cloning IMDb website-->
+    <section class="section section4">
+        <h3 class="catagory-title"><span class="catagory-start">|</span>From your watchlist</h3>
+    </section>
+    <!--part 5 of cloning IMDb website-->
+    <section class="section section5">
+        <h3 class="catagory-title"><span class="catagory-start">|</span>Top 10 on IMDb this week</h3>
+    </section>
+    <!--part 6 of cloning IMDb website-->
+    <section class="section section6">
+        <h3 class="catagory-title"><span class="catagory-start">|</span>Fan favorite</h3>
+    </section>
+    <!--part 7 of cloning IMDb website-->
+    <section class="section section7">
+        <h3 class="catagory-title"><span class="catagory-start">|</span>More to watch</h3>
+        <h2 class="sub-title">Exclusive videos</h2>
+        <h3 class="catagory-title"><span class="catagory-start">|</span>IMDb Originals</h3>
+    </section>
+    <!--part 8 of cloning IMDb website-->
+    <section class="section section8">
+        <h2 class="sub-title">Explore what's streaming</h2>
+    </section>
+    <!--part 9 of cloning IMDb website-->
+    <section class="section section9">
+        <h2 class="sub-title">Explore Movie & TV shows</h2>
+        <h3 class="catagory-title"><span class="catagory-start">|</span>In theaters</h3>
+    </section>
+    <!--part 10 of cloning IMDb website-->
+    <section class="section section10">
+        <h3 class="catagory-title"><span class="catagory-start">|</span>Top box office(US)</h3>
+    </section>
+    <!--part 11 of cloning IMDb website-->
+    <section class="section section11">
+        <h3 class="catagory-title"><span class="catagory-start">|</span>Coming soon to theaters</h3>
+    </section>
+    <!--part 12 of cloning IMDb website-->
+    <section class="section section12">
+        <h3 class="catagory-title"><span class="catagory-start">|</span>Born today</h3>
+    </section>
+    <!--part 13 of cloning IMDb website-->
+    <section class="section section13">
+        <h2 class="sub-title" style="color: white;">Recently Viewed</h2>
+    </section>
 </body>
 </html>
