--- a/IMDb buddy buddy/Home-page.html
+++ b/IMDb buddy buddy/Home-page.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="maincss.css"> <!--for all of the parts-->
     <link rel="stylesheet" href="Style.css"> 
     <link rel="stylesheet" href="section1.css">
+    <link rel="stylesheet" href="section3.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
@@ -69,7 +70,7 @@
         </div>
     </heading>
     <!-- Showcase scroll screen -->
-    <section class="section section1">
+    <section class="section section1" id="section1">
         <div class="major-container">
           <div class="scroll-container">
             <div class="scroll img1">
@@ -115,55 +116,65 @@
     </section>
 
     <!--part 2 of cloning IMDb website-->
-    <section class="section section2">
+    <section class="section section2" id="section2">
         <h2 class="sub-title">Featured today</h2>
     </section>
     <!--part 3 of cloning IMDb website-->
-    <section class="section section3">
+    <section class="section section3" id="section3">
         <h2 class="sub-title">What to watch</h2>
         <h3 class="catagory-title"><span class="catagory-start">|</span>Top picks</h3>
+        <p class="catagory-description">TV shows and movies just for you</p>
+        <a href="" class="signin">sign in</a>
+        <div class="popular-movie-scroll">
+            <div class="bg-image-topwatch bg-image-topwatch1">
+                <button class="add-to">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><style>svg{fill:#ffffff}</style><path d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32V224H48c-17.7 0-32 14.3-32 32s14.3 32 32 32H192V432c0 17.7 14.3 32 32 32s32-14.3 32-32V288H400c17.7 0 32-14.3 32-32s-14.3-32-32-32H256V80z"/></svg>
+                    <polygon class="watchlist-banner" points="24 31.7728343 24 33.7728343 12.2436611 28.2926049 0 34 0 32 12.2436611 26.2926049"></polygon>
+                </button>
+            </div>
+        </div>
     </section>
     <!--part 4 of cloning IMDb website-->
-    <section class="section section4">
+    <section class="section section4" id="section4">
         <h3 class="catagory-title"><span class="catagory-start">|</span>From your watchlist</h3>
     </section>
     <!--part 5 of cloning IMDb website-->
-    <section class="section section5">
+    <section class="section section5" id="section5">
         <h3 class="catagory-title"><span class="catagory-start">|</span>Top 10 on IMDb this week</h3>
     </section>
     <!--part 6 of cloning IMDb website-->
-    <section class="section section6">
+    <section class="section section6" id="section6">
         <h3 class="catagory-title"><span class="catagory-start">|</span>Fan favorite</h3>
     </section>
     <!--part 7 of cloning IMDb website-->
-    <section class="section section7">
+    <section class="section section7" id="section7">
         <h3 class="catagory-title"><span class="catagory-start">|</span>More to watch</h3>
         <h2 class="sub-title">Exclusive videos</h2>
         <h3 class="catagory-title"><span class="catagory-start">|</span>IMDb Originals</h3>
     </section>
     <!--part 8 of cloning IMDb website-->
-    <section class="section section8">
+    <section class="section section8" id="section8">
         <h2 class="sub-title">Explore what's streaming</h2>
     </section>
     <!--part 9 of cloning IMDb website-->
-    <section class="section section9">
+    <section class="section section9" id="section9">
         <h2 class="sub-title">Explore Movie & TV shows</h2>
         <h3 class="catagory-title"><span class="catagory-start">|</span>In theaters</h3>
     </section>
     <!--part 10 of cloning IMDb website-->
-    <section class="section section10">
+    <section class="section section10" id="section10">
         <h3 class="catagory-title"><span class="catagory-start">|</span>Top box office(US)</h3>
     </section>
     <!--part 11 of cloning IMDb website-->
-    <section class="section section11">
+    <section class="section section11" id="section11">
         <h3 class="catagory-title"><span class="catagory-start">|</span>Coming soon to theaters</h3>
     </section>
     <!--part 12 of cloning IMDb website-->
-    <section class="section section12">
+    <section class="section section12" id="section12">
         <h3 class="catagory-title"><span class="catagory-start">|</span>Born today</h3>
     </section>
     <!--part 13 of cloning IMDb website-->
-    <section class="section section13">
+    <section class="section section13" id="section13">
         <h2 class="sub-title" style="color: white;">Recently Viewed</h2>
     </section>
 </body>
