--- a/IMDb buddy buddy/Home-page.html
+++ b/IMDb buddy buddy/Home-page.html
@@ -6,6 +6,7 @@
     <title>Doppleganger</title>
     <link rel="stylesheet" href="maincss.css"> <!--for all of the parts-->
     <link rel="stylesheet" href="Style.css"> 
+    <link rel="stylesheet" href="IMDb buddy buddy/Showcase-scroll-screen.css">
     <link rel="stylesheet" href="section1.css">
     <link rel="stylesheet" href="section3.css">
     <link rel="stylesheet" href="section4.css">
@@ -73,50 +74,47 @@
         </div>
     </heading>
     <!-- Showcase scroll screen -->
-    <section class="section section1" id="section1">
-        <div class="major-container">
-          <div class="scroll-container">
-            <div class="scroll img1">
-                <div class="ds-container">
-                    <div class="poster">
-                        <img src="https://assets-prd.ignimgs.com/2022/07/22/iamgroot-button-1658520669711.jpg" alt="">
-                    </div>
-                    <h1>My man I have done it</h1>
-                </div>
-            </div>
-            <!--image 1-->
-            <div class="scroll img2">
-                <h1>love</h1>
-            </div>
-            <!--image 2-->
-            <div class="scroll img3">
-                <h1>Quasaunt</h1>
-            </div>
-            <!--image 3-->
-            <div class="scroll img4">
-                <h1>and</h1>
-            </div>
-            <!--image 4-->
-            <div class="scroll img5">
-                <h1>egg tarts</h1>
-            </div>
-            <!--image 5-->
-            <div class="scroll img6">
-                <h1>baked</h1>
-            </div>
-            <!--image 6-->
-            <div class="scroll img7">
-                <h1>with</h1>
-            </div>
-            <!--image 7-->
-            <div class="scroll img8">
-                <h1>meat oil</h1>
-            </div>
-          </div>
-        <div class="minor-section">
-          
-        </div>
-    </section>
+        <div class='wrap'>
+  <ul class='carousel is-set'>
+    <li class='carousel-seat'>
+      <h2>1</h2>
+    </li>
+    <li class='carousel-seat'>
+      <h2>2</h2>
+    </li>
+    <li class='carousel-seat'>
+      <h2>3</h2>
+    </li>
+    <li class='carousel-seat'>
+      <h2>4</h2>
+    </li>
+    <li class='carousel-seat'>
+      <h2>5</h2>
+    </li>
+    <li class='carousel-seat'>
+      <h2>6</h2>
+    </li>
+    <li class='carousel-seat'>
+      <h2>7</h2>
+    </li>
+    <li class='carousel-seat'>
+      <h2>8</h2>
+    </li>
+    <li class='carousel-seat'>
+      <h2>9</h2>
+    </li>
+    <li class='carousel-seat'>
+      <h2>10</h2>
+    </li>
+    <li class='carousel-seat'>
+      <h2>11</h2>
+    </li>
+    <li class='carousel-seat is-ref'>
+      <h2>12</h2>
+    </li>
+  </ul>
+    </div>
+
 
     <!--part 2 of cloning IMDb website-->
     <section class="section section2" id="section2">
@@ -875,5 +873,6 @@
         <h2 class="sub-title" style="color: white;">Recently Viewed</h2>
     </section>
     <script src="main.js"></script>
+    <script src="Carrosel.js"></script>
 </body>
 </html>
