--- a/IMDb buddy buddy/Home-page.html
+++ b/IMDb buddy buddy/Home-page.html
@@ -74,7 +74,19 @@
         </div>
     </heading>
     <!-- Showcase scroll screen -->
-        <div class='wrap'>
+    <div class="section-1">
+       
+        <div class="carousel-container">
+
+        </div>
+
+        <div class="Section1-column">
+             <h1 class="Section1-h1"> Up next </h1>
+        </div>
+    
+    </div> 
+
+    <!-- <div class='wrap'>
   <ul class='carousel is-set'>
     <li class='carousel-seat'>
       <h2>1</h2>
@@ -113,7 +125,7 @@
       <h2>12</h2>
     </li>
   </ul>
-    </div>
+    </div> -->
 
 
     <!--part 2 of cloning IMDb website-->
