--- a/IMDb buddy buddy/Home-page.html
+++ b/IMDb buddy buddy/Home-page.html
@@ -112,6 +112,7 @@
             <div class="scroll img8">
                 <h1>meat oil</h1>
             </div>
+            <button id="transitionright1" onclick="transitionright()">></button>
           </div>
         <div class="minor-section">
           
@@ -842,6 +843,9 @@
     <!--part 6 of cloning IMDb website-->
     <section class="section section6" id="section6">
         <h3 class="catagory-title"><span class="catagory-start">|</span>Fan favorite</h3>
+        <div class="fanwatch-movie-scroll">
+            <!--js append items-->
+        </div>
     </section>
     <!--part 7 of cloning IMDb website-->
     <section class="section section7" id="section7">
