--- a/IMDb buddy buddy/Home-page.html
+++ b/IMDb buddy buddy/Home-page.html
@@ -84,40 +84,84 @@
                                 <img src="https://assets-prd.ignimgs.com/2022/07/22/iamgroot-button-1658520669711.jpg"
                                     alt="">
                             </div>
-                            <h1>My man I have done it</h1>
+                            <h1>I am Groot</h1>
                         </div>
                     </div>
                     <!--image 1-->
                     <div class="scroll img2">
-                        <h1>love</h1>
+                        <div class="ds-container">
+                            <div class="poster">
+                                <img src="https://assets-prd.ignimgs.com/2022/07/22/iamgroot-button-1658520669711.jpg"
+                                    alt="">
+                            </div>
+                            <h1>Godzilla and King Kong are Coming to Streming</h1>
+                        </div>
                     </div>
                     <!--image 2-->
                     <div class="scroll img3">
-                        <h1>Quasaunt</h1>
+                        <div class="ds-container">
+                            <div class="poster">
+                                <img src="https://assets-prd.ignimgs.com/2022/07/22/iamgroot-button-1658520669711.jpg"
+                                    alt="">
+                            </div>
+                            <h1>Celebrating 20 years of 'Oldboy' with Director Park Chan-Wook</h1>
+                        </div>
                     </div>
                     <!--image 3-->
                     <div class="scroll img4">
-                        <h1>and</h1>
+                        <div class="ds-container">
+                            <div class="poster">
+                                <img src="https://assets-prd.ignimgs.com/2022/07/22/iamgroot-button-1658520669711.jpg"
+                                    alt="">
+                            </div>
+                            <h1>the pressure to get ahsoka and thrawn right</h1>
+                        </div>
                     </div>
                     <!--image 4-->
                     <div class="scroll img5">
-                        <h1>egg tarts</h1>
+                        <div class="ds-container">
+                            <div class="poster">
+                                <img src="https://assets-prd.ignimgs.com/2022/07/22/iamgroot-button-1658520669711.jpg"
+                                    alt="">
+                            </div>
+                            <h1>Bradly Cooper and carey Mulligan Star in 'Maestro'</h1>
+                        </div>
                     </div>
                     <!--image 5-->
                     <div class="scroll img6">
-                        <h1>baked</h1>
+                        <div class="ds-container">
+                            <div class="poster">
+                                <img src="https://assets-prd.ignimgs.com/2022/07/22/iamgroot-button-1658520669711.jpg"
+                                    alt="">
+                            </div>
+                            <h1>Michael Cera is Back in "Scott Pilgrim Takes Off"</h1>
+                        </div>
                     </div>
                     <!--image 6-->
                     <div class="scroll img7">
-                        <h1>with</h1>
+                        <div class="ds-container">
+                            <div class="poster">
+                                <img src="https://assets-prd.ignimgs.com/2022/07/22/iamgroot-button-1658520669711.jpg"
+                                    alt="">
+                            </div>
+                            <h1>'Bottoms' Exclusive Clip</h1>
+                        </div>
                     </div>
                     <!--image 7-->
                     <div class="scroll img8">
-                        <h1>meat oil</h1>
+                        <div class="ds-container">
+                            <div class="poster">
+                                <img src="https://assets-prd.ignimgs.com/2022/07/22/iamgroot-button-1658520669711.jpg"
+                                    alt="">
+                            </div>
+                            <h1>'Flora and Son'</h1>
+                        </div>
                     </div>
+                </div>
+                <div class="button-right-container">
                     <button id="transitionright1" onclick="transitionright()">></button>
                 </div>
-            </div>    
+            </div>
             <div class="minor-section">
                 <h2> Up next</h2>
                
