--- a/IMDb buddy buddy/Home-page.html
+++ b/IMDb buddy buddy/Home-page.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="section5.css">
     <link rel="stylesheet" href="section6.css">
     <link rel="stylesheet" href="section7.css">
+
+    <link rel="stylesheet" href="section9.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
@@ -1680,6 +1682,10 @@
     <section class="section section9" id="section9">
         <h2 class="sub-title">Explore Movie & TV shows</h2>
         <h3 class="catagory-title"><span class="catagory-start">|</span>In theaters</h3>
+        <div class="catagory-description"><showtime>showtime near you</div>
+        <div class="nearshowtime">
+            <!-- js the entire thing -->
+        </div>
     </section>
     <!--part 10 of cloning IMDb website-->
     <section class="section section10" id="section10">
