--- a/IMDb buddy buddy/Home-page.html
+++ b/IMDb buddy buddy/Home-page.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="section5.css">
     <link rel="stylesheet" href="section6.css">
     <link rel="stylesheet" href="section7.css">
+    <link rel="stylesheet" href="section8.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
@@ -1675,6 +1676,7 @@
     <!--part 8 of cloning IMDb website-->
     <section class="section section8" id="section8">
         <h2 class="sub-title">Explore what's streaming</h2>
+        <button class="section-8"> PRIME VIDEO </button>
     </section>
     <!--part 9 of cloning IMDb website-->
     <section class="section section9" id="section9">
