--- a/IMDb buddy buddy/Home-page.html
+++ b/IMDb buddy buddy/Home-page.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="section6.css">
     <link rel="stylesheet" href="section7.css">
     <link rel="stylesheet" href="section8.css">
+    <link rel="stylesheet" href="section11.css">
 
     <link rel="stylesheet" href="section9.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -1696,6 +1697,56 @@
     <!--part 11 of cloning IMDb website-->
     <section class="section section11" id="section11">
         <h3 class="catagory-title"><span class="catagory-start">|</span>Coming soon to theaters</h3>
+        <h5> Trailers for upcoming release</h5>
+        <div style="display: flex; flex-direction: row; justify-content: space-between;">
+            <!-- trailer 1  -->
+            <div class="thumbnails">
+                <img src="https://m.media-amazon.com/images/M/MV5BZTkwMTA1MzAtYmNiOC00NTRiLWE1ZjItNTVkZTQyYzNlNmU2XkEyXkFqcGdeQVRoaXJkUGFydHlJbmdlc3Rpb25Xb3JrZmxvdw@@._V1_QL75_UX380_CR0,0,380,214_.jpg" alt="video">
+                <div class="video-info">
+                    <i class='bx bx-play-circle' style="color:white;"></i>
+                    <p> 0:45</p>
+                </div>
+                <div style="display: flex; flex-direction:row;">
+                <i class='bx bx-bookmark-plus'></i>
+                    <div style="display: flex; flex-direction:column; margin-top:-10px">
+                        <h5>5 Things to Watch This Week</h5>
+                        <a href="https://www.imdb.com/list/ls025720609/videoplayer/vi4018915097?ref_=hm_edcio_c_og_5tw_8212023_1_cta">Get tickets</a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- trailer 2  -->
+            <div class="thumbnails">
+                <img src="https://m.media-amazon.com/images/M/MV5BZTkwMTA1MzAtYmNiOC00NTRiLWE1ZjItNTVkZTQyYzNlNmU2XkEyXkFqcGdeQVRoaXJkUGFydHlJbmdlc3Rpb25Xb3JrZmxvdw@@._V1_QL75_UX380_CR0,0,380,214_.jpg" alt="video">
+                <div class="video-info">
+                    <i class='bx bx-play-circle' style="color:white;"></i>
+                    <p> 0:45</p>
+                </div>
+                <div style="display: flex; flex-direction:row;">
+                <i class='bx bx-bookmark-plus'></i>
+                    <div style="display: flex; flex-direction:column; margin-top:-10px">
+                        <h5>5 Things to Watch This Week</h5>
+                        <a href="https://www.imdb.com/list/ls025720609/videoplayer/vi4018915097?ref_=hm_edcio_c_og_5tw_8212023_1_cta">Get tickets</a>
+                    </div>
+                </div>
+            </div>
+            <!-- trailer 3  -->
+            <div class="thumbnails">
+                <img src="https://m.media-amazon.com/images/M/MV5BZTkwMTA1MzAtYmNiOC00NTRiLWE1ZjItNTVkZTQyYzNlNmU2XkEyXkFqcGdeQVRoaXJkUGFydHlJbmdlc3Rpb25Xb3JrZmxvdw@@._V1_QL75_UX380_CR0,0,380,214_.jpg" alt="video">
+                <div class="video-info">
+                    <i class='bx bx-play-circle' style="color:white;"></i>
+                    <p> 0:45</p>
+                </div>
+                <div style="display: flex; flex-direction:row;">
+                <i class='bx bx-bookmark-plus'></i>
+                    <div style="display: flex; flex-direction:column; margin-top:-10px">
+                        <h5>5 Things to Watch This Week</h5>
+                        <a href="https://www.imdb.com/list/ls025720609/videoplayer/vi4018915097?ref_=hm_edcio_c_og_5tw_8212023_1_cta">Get tickets</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+   
     </section>
     <!--part 12 of cloning IMDb website-->
     <section class="section section12" id="section12">
