--- a/IMDb buddy buddy/Home-page.html
+++ b/IMDb buddy buddy/Home-page.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="section11.css">
 
     <link rel="stylesheet" href="section9.css">
+    <link rel="stylesheet" href="section10.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
@@ -1692,7 +1693,95 @@
     </section>
     <!--part 10 of cloning IMDb website-->
     <section class="section section10" id="section10">
-        <h3 class="catagory-title"><span class="catagory-start">|</span>Top box office(US)</h3>
+        <h3 class="catagory-title"><span class="catagory-start">|</span>Top box office(US) ></h3>
+        <h4 class="catagory-description"> Weekend of august 18-20</h4>
+        <div class="box-office-container">
+            <div class="box-element">
+                <h4>1</h4>
+                <div class="bookmark-box">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 24 24"
+                    style="fill: rgb(61, 61, 61);">
+                    <path d="M17 2H7a2 2 0 0 0-2 2v18l7-4.848L19 22V4a2 2 0 0 0-2-2zm-1 9h-3v3h-2v-3H8V9h3V6h2v3h3v2z">
+                    </path>
+                    </svg>
+                </div>
+                <div class="box-descript">
+                    <h3>Blue Beetle</h3>
+                    <h4>$25M</h4>
+                </div>
+            </div>
+            <div class="box-element">
+                <h4>2</h4>
+                <div class="bookmark-box">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 24 24"
+                    style="fill: rgb(61, 61, 61);">
+                    <path d="M17 2H7a2 2 0 0 0-2 2v18l7-4.848L19 22V4a2 2 0 0 0-2-2zm-1 9h-3v3h-2v-3H8V9h3V6h2v3h3v2z">
+                    </path>
+                    </svg>
+                </div>
+                <div class="box-descript">
+                    <h3>Blue Beetle</h3>
+                    <h4>$25M</h4>
+                </div>
+            </div>
+            <div class="box-element">
+                <h4>3</h4>
+                <div class="bookmark-box">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 24 24"
+                    style="fill: rgb(61, 61, 61);">
+                    <path d="M17 2H7a2 2 0 0 0-2 2v18l7-4.848L19 22V4a2 2 0 0 0-2-2zm-1 9h-3v3h-2v-3H8V9h3V6h2v3h3v2z">
+                    </path>
+                    </svg>
+                </div>
+                <div class="box-descript">
+                    <h3>Blue Beetle</h3>
+                    <h4>$25M</h4>
+                </div>
+            </div>
+            <div class="box-element">
+                <h4>4</h4>
+                <div class="bookmark-box">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 24 24"
+                    style="fill: rgb(61, 61, 61);">
+                    <path d="M17 2H7a2 2 0 0 0-2 2v18l7-4.848L19 22V4a2 2 0 0 0-2-2zm-1 9h-3v3h-2v-3H8V9h3V6h2v3h3v2z">
+                    </path>
+                    </svg>
+                </div>
+                <div class="box-descript">
+                    <h3>Blue Beetle</h3>
+                    <h4>$25M</h4>
+                </div>
+            </div>
+            <div class="box-element">
+                <h4>5</h4>
+                <div class="bookmark-box">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 24 24"
+                    style="fill: rgb(61, 61, 61);">
+                    <path d="M17 2H7a2 2 0 0 0-2 2v18l7-4.848L19 22V4a2 2 0 0 0-2-2zm-1 9h-3v3h-2v-3H8V9h3V6h2v3h3v2z">
+                    </path>
+                    </svg>
+                </div>
+                <div class="box-descript">
+                    <h3>Blue Beetle</h3>
+                    <h4>$25M</h4>
+                </div>
+            </div>
+            <div class="box-element">
+                <h4>6</h4>
+                <div class="bookmark-box">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 24 24"
+                    style="fill: rgb(61, 61, 61);">
+                    <path d="M17 2H7a2 2 0 0 0-2 2v18l7-4.848L19 22V4a2 2 0 0 0-2-2zm-1 9h-3v3h-2v-3H8V9h3V6h2v3h3v2z">
+                    </path>
+                    </svg>
+                </div>
+                <div class="box-descript">
+                    <h3>Blue Beetle</h3>
+                    <h4>$25M</h4>
+                </div>
+            </div>
+
+        </div>
     </section>
     <!--part 11 of cloning IMDb website-->
     <section class="section section11" id="section11">
